syntax = "proto3";

package proto;
option go_package = "./;proto";

import "GachaUpInfo.proto";

message GachaInfo {
  uint32 gacha_type = 13;
  uint32 schedule_id = 4;
  uint32 begin_time = 2;
  uint32 end_time = 6;
  uint32 cost_item_id = 10;
  uint32 cost_item_num = 1;
  string gacha_prefab_path = 11;
  string gacha_prob_url = 14;
  string gacha_record_url = 9;
  string gacha_preview_prefab_path = 7;
  uint32 ten_cost_item_id = 8;
  uint32 ten_cost_item_num = 12;
  uint32 left_gacha_times = 3;
  uint32 gacha_times_limit = 5;
  uint32 gacha_sort_id = 15;
  string gacha_prob_url_oversea = 227;
  string gacha_record_url_oversea = 1995;
  repeated GachaUpInfo gacha_up_info_list = 883;
  string title_textmap = 1044;
  repeated uint32 display_up_5_item_list = 1743;
  repeated uint32 display_up_4_item_list = 969;
  uint32 wish_item_id = 1344;
  uint32 wish_progress = 1519;
  uint32 wish_max_progress = 219;
  bool is_new_wish = 472;
}