syntax = "proto3";

package proto;
option go_package = "./;proto";

import "GachaTransferItem.proto";
import "ItemParam.proto";

message GachaItem {
  ItemParam gacha_item_ = 5;
  repeated GachaTransferItem transfer_items = 3;
  bool is_flash_card = 4;
  bool is_gacha_item_new = 8;
  repeated ItemParam token_item_list = 13;
}