syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ItemParam.proto";

message GachaTransferItem {
  ItemParam item = 1;
  bool is_transfer_item_new = 2;
}
