syntax = "proto3";

package proto;
option go_package = "./;proto";

message GachaUpInfo {
  uint32 item_parent_type = 12;
  repeated uint32 item_id_list = 10;
}